# termNote

./: .dir-locals.el  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  cmake_install.cmake  default.nix  examples.cfg  result  termNote.nix  test.sh  vcpkg.json
.github/workflows/: cmake.yml
include/: .#note.hpp  config.hpp  note.hpp
include/termNote/: Note.hpp  NoteManager.hpp
noted/: CMakeLists.txt
noted/src/: main.cpp
notiz/: CMakeLists.txt
notiz/inc/: backend.hpp  command.hpp  file_backend.hpp  note.hpp  notebook.hpp
notiz/src/: file_backend.cpp  notebook.cpp
src/: main.cpp  note.cpp  noted.cpp
src/termNote/: Note.cpp  NoteManager.cpp
termNote/: CMakeLists.txt  notes
termNote/conf/: version.hpp.in
termNote/inc/: backend.hpp  file_backend.hpp  notebook.hpp  version.hpp
termNote/src/: file_backend.cpp  main.cpp  notebook.cpp
test/: backend.cpp  main.cpp
